blockml/test/valid/09_wherecalc_refs_dim/v22/v22d.dashboard
dashboard: v22d
title: 'sales'
reports:
- title: 'weekly'
  model: v22m
  select:
  - a.dim6
  - mf.dim5
  - mf.dim4
  type: 'table'
