blockml/test/errors/11_report/e218/e218d.dashboard
dashboard: e218d
title: 'sales'
reports:
- title: 'overview'
  model: e218m
  select:
  - a.dim1
  timezone: 'abc'   
  type: 'bar_vertical'
  data:
    x_field: a.dim1
    y_field: a.dim1
